FIX - add overflow on popover

--- a/src/front_end/static/css/general_styling.css
+++ b/src/front_end/static/css/general_styling.css
@@ -275,6 +275,7 @@ div.modeldesc p {
     background-color: gainsboro;
     font-size: large;
     color: #1c1c1c;
+    overflow:auto;
 }
 
 @media (max-width:991px) {
